script to assign qualifications, update visual prompt, copy non-visual prompt

--- a/mturk/sandbox/prompt_imgs.html
+++ b/mturk/sandbox/prompt_imgs.html
@@ -77,6 +77,7 @@
                     <hr />
                     <input type="checkbox" name="wjj-nonsense1" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense1" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense1" value="pjj-nonsense"/><label>I don't know what it means for a <span class="part">PART</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="pw-nonsense1" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
                 <div class="question">
@@ -90,6 +91,7 @@
                     <hr />
                     <input type="checkbox" name="wjj-nonsense2" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense2" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense2" value="pjj-nonsense"/><label>I don't know what it means for a <span class="part">PART</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="pw-nonsense2" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
                 <div class="question">
@@ -103,6 +105,7 @@
                     <hr />
                     <input type="checkbox" name="wjj-nonsense3" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense3" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense3" value="pjj-nonsense"/><label>I don't know what it means for a <span class="part">PART</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="pw-nonsense3" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
                 <div class="question">
@@ -116,6 +119,7 @@
                     <hr />
                     <input type="checkbox" name="wjj-nonsense4" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense4" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense4" value="pjj-nonsense"/><label>I don't know what it means for a <span class="part">PART</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="pw-nonsense4" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
                 <div class="question">
@@ -129,6 +133,7 @@
                     <hr />
                     <input type="checkbox" name="wjj-nonsense5" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense5" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense5" value="pjj-nonsense"/><label>I don't know what it means for a <span class="part">PART</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="pw-nonsense5" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
                 <div class="question">
@@ -142,6 +147,7 @@
                     <hr />
                     <input type="checkbox" name="wjj-nonsense6" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense6" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense6" value="pjj-nonsense"/><label>I don't know what it means for a <span class="part">PART</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="pw-nonsense6" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
                 <div class="question">
@@ -155,6 +161,7 @@
                     <hr />
                     <input type="checkbox" name="wjj-nonsense7" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense7" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense7" value="pjj-nonsense"/><label>I don't know what it means for a <span class="part">PART</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="pw-nonsense7" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
                 <div class="question">
@@ -168,6 +175,7 @@
                     <hr />
                     <input type="checkbox" name="wjj-nonsense8" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense8" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense8" value="pjj-nonsense"/><label>I don't know what it means for a <span class="part">PART</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="pw-nonsense8" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
                 <div class="question">
@@ -181,6 +189,7 @@
                     <hr />
                     <input type="checkbox" name="wjj-nonsense9" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense9" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense9" value="pjj-nonsense"/><label>I don't know what it means for a <span class="part">PART</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="pw-nonsense9" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
                 <div class="question">
@@ -194,6 +203,7 @@
                     <hr />
                     <input type="checkbox" name="wjj-nonsense10" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense10" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense10" value="pjj-nonsense"/><label>I don't know what it means for a <span class="part">PART</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="pw-nonsense10" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
                 <p lang="en-US" style="color: rgb(34, 34, 34)"><b>(Optional)</b> Please provide any comments that you have about this HIT. Thanks for doing our HIT! We appreciate your input!</p>
@@ -220,6 +230,8 @@
                             this.innerText = 'Collapse instructions';
                         }
                     });
+                    //collapse by default
+                    coll[i].click()
                 }
             </script>
 
